--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongodb": "^3.1.10",
+    "mongoose": "^5.3.14",
     "pug": "^2.0.3"
   },
   "devDependencies": {
